tests/feature_tests/snapshots/e2e__feature_tests__current__Zsh.snap
---
source: tests/feature_tests/current.rs
expression: "&source.trim()"
---
set -e
eval "$(fnm env)"
if [ "$(fnm current)" != "none" ]; then
    echo 'Expected currently activated version to be "none", Got: '"$(fnm current)"
    exit 1
fi

fnm install v8.11.3
fnm install v10.10.0
fnm use v8.11.3
if [ "$(fnm current)" != "v8.11.3" ]; then
    echo 'Expected currently activated version to be "v8.11.3", Got: '"$(fnm current)"
    exit 1
fi

fnm use v10.10.0
if [ "$(fnm current)" != "v10.10.0" ]; then
    echo 'Expected currently activated version to be "v10.10.0", Got: '"$(fnm current)"
    exit 1
fi

fnm use system
if [ "$(fnm current)" != "system" ]; then
    echo 'Expected currently activated version to be "system", Got: '"$(fnm current)"
    exit 1
fi
